--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 biopython
 joblib
-matplotlib
-pandas==1.4.1
-seaborn
-xlrd==1.2.0
-distro
+matplotlib==3.5.3
+pandas==1.3.5
+seaborn==0.12.2
+waiting
+dask==2022.02.0
+tables==3.7.0
+Jinja2==3.1.2
