--- a/config/main.config
+++ b/config/main.config
@@ -130,21 +130,21 @@ maxAS_StrandOddsRatio       4   # REQUIRED. Max AS_StrandOddsRatio (https://gatk
 figDPI                                                  150     # DPI for the generated figures.
 figGenerateMutationCountBarPlotsPerRun                  On      # Generate the mutation count bar plots per run. Will generate if value is "On".
 figGenerateMutationCountPerGeneBarPlotPerRun            On      # Generate the mutation count per gene bar plots per run. Will generate if value is "On".
-figGenerateGlobalMutationCountBarPlots                  Off      # Generate the global mutation count bar plots. Will generate if value is "On".
-figGenerateGlobalMutationCountPerRunBarPlots            Off      # Generate the global mutation count per run bar plots. Will generate if value is "On".
-figGenerateGlobalMutationCountPerGeneBarPlots           Off      # Generate the global mutation count per gene bar plots. Will generate if value is "On".
+figGenerateGlobalMutationCountBarPlots                  On      # Generate the global mutation count bar plots. Will generate if value is "On".
+figGenerateGlobalMutationCountPerRunBarPlots            On      # Generate the global mutation count per run bar plots. Will generate if value is "On".
+figGenerateGlobalMutationCountPerGeneBarPlots           On      # Generate the global mutation count per gene bar plots. Will generate if value is "On".
 figGenerateMutationCountBoxPlotsPerRun                  On      # Generate the mutation count box plots per run. Will generate if value is "On".
 figGenerateMutationCountPerGeneBoxPlotPerRun            On      # Generate the mutation count per gene box plots per run. Will generate if value is "On".
-figGenerateGlobalMutationCountBoxPlots                  Off      # Generate the global mutation count box plots. Will generate if value is "On".
-figGenerateGlobalMutationCountPerRunBoxPlots            Off      # Generate the global mutation count per run box plots. Will generate if value is "On".
-figGenerateGlobalMutationCountPerGeneBoxPlots           Off      # Generate the global mutation count per gene box plots. Will generate if value is "On".
-figGenerateGlobalFrequencyPerMutationStripPlots         Off      # Generate the global frequency per mutation strip plot. Will generate if value is "On".
-figGenerateGlobalFrequencyPerGeneStripPlots             Off      # Generate the global frequency per gene strip plot. Will generate if value is "On".
-figGenerateGlobalFrequencyPerRunStripPlots              Off      # Generate the global frequency per run strip plot. Will generate if value is "On".
-figGenerateGlobalDistributionHistogramsPlots            Off      # Generate the global distribution histograms plot. Will generate if value is "On".
-figGenerateGlobalRegressionPlots                        Off      # Generate the global regression for total reads vs alternate reads plot. Will generate if value is "On".
-figGenerateGlobalPresencePerRunPerPositionGraphs        Off      # Generate the global presence per run per position graphs. Will generate if value is "On".
-figGenerateFrequencyPerMutationPerPositionGraphsPerRun  Off      # Generate the frequency per position graphs per run. Will generate if value is "On".
+figGenerateGlobalMutationCountBoxPlots                  On      # Generate the global mutation count box plots. Will generate if value is "On".
+figGenerateGlobalMutationCountPerRunBoxPlots            On      # Generate the global mutation count per run box plots. Will generate if value is "On".
+figGenerateGlobalMutationCountPerGeneBoxPlots           On      # Generate the global mutation count per gene box plots. Will generate if value is "On".
+figGenerateGlobalFrequencyPerMutationStripPlots         On      # Generate the global frequency per mutation strip plot. Will generate if value is "On".
+figGenerateGlobalFrequencyPerGeneStripPlots             On      # Generate the global frequency per gene strip plot. Will generate if value is "On".
+figGenerateGlobalFrequencyPerRunStripPlots              On      # Generate the global frequency per run strip plot. Will generate if value is "On".
+figGenerateGlobalDistributionHistogramsPlots            On      # Generate the global distribution histograms plot. Will generate if value is "On".
+figGenerateGlobalRegressionPlots                        On      # Generate the global regression for total reads vs alternate reads plot. Will generate if value is "On".
+figGenerateGlobalPresencePerRunPerPositionGraphs        On      # Generate the global presence per run per position graphs. Will generate if value is "On".
+figGenerateFrequencyPerMutationPerPositionGraphsPerRun  On      # Generate the frequency per position graphs per run. Will generate if value is "On".
 figPositionGraph                                        both    # Graph type for graphs that display data per position. 'heatmap', 'circos', 'both' or 'none'.
 figPositionGraphMinIntensity                            0.05    # Minimum color intensity for the positions with mutation frequency > 0. Values betweeen 0.00001 and .
 # === Per gene bar plots ===
